--- a/eurekaServer/src/main/resources/application.yml
+++ b/eurekaServer/src/main/resources/application.yml
@@ -1,9 +1,11 @@
 spring:
   application:
-    name: eureka-server
+    name: eureka
+
 server:
   port: 8761
+
 eureka:
   client:
-      registerWithEureka: false
-      fetchRegistry: false
+    registerWithEureka: true
+    fetchRegistry: false
