--- a/toAcceptMessage/src/main/resources/application.yml
+++ b/toAcceptMessage/src/main/resources/application.yml
@@ -1,1 +1,23 @@
+server:
+  port: 8082
+
+spring:
+  profiles:
+    default: dev
+  application:
+    name: toAcceptMessage
+  datasource:
+    url: jdbc:postgresql://localhost:5432/postgres
+    username: postgres
+    password: 821252
+    driver-class-name: org.postgresql.Driver
+  jpa:
+    show-sql: true
+    hibernate:
+      ddl-auto: create-drop
+  eureka:
+    server:
+      service-url:
+        defaultZone: http://localhost:8761/eureka
+
 
