--- a/toAcceptMessage/src/main/resources/application.yml
+++ b/toAcceptMessage/src/main/resources/application.yml
@@ -5,19 +5,20 @@ spring:
   profiles:
     default: dev
   application:
-    name: toAcceptMessage
+    name: accept-message
   datasource:
+    driver-class-name: org.postgresql.Driver
     url: jdbc:postgresql://localhost:5432/postgres
     username: postgres
     password: 821252
-    driver-class-name: org.postgresql.Driver
   jpa:
     show-sql: true
     hibernate:
       ddl-auto: create-drop
-  eureka:
-    server:
-      service-url:
-        defaultZone: http://localhost:8761/eureka
-
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8761/eureka/
+  instance:
+    instance-id: accept-message
 
