--- a/sendMessage/src/main/resources/application.yml
+++ b/sendMessage/src/main/resources/application.yml
@@ -5,7 +5,7 @@ eureka:
     service-url:
       defaultZone: http://localhost:8761/eureka/
   instance:
-    instance-id: send-message
+    instance-id: send-message-service
 spring:
   application:
-    name: send-message-service
+    name: send-message
