--- a/toAcceptMessage/src/main/resources/application.yml
+++ b/toAcceptMessage/src/main/resources/application.yml
@@ -20,5 +20,5 @@ eureka:
     service-url:
       defaultZone: http://localhost:8761/eureka/
   instance:
-    instance-id: accept-message
+    instance-id: accept-message-service
 
