--- a/toAcceptMessage/src/main/resources/application.yml
+++ b/toAcceptMessage/src/main/resources/application.yml
@@ -1,9 +1,14 @@
 server:
   port: 8082
 
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8888/eureka/
+  instance:
+    instance-id: accept-message-service
+
 spring:
-  profiles:
-    default: dev
   application:
     name: accept-message
   datasource:
@@ -11,14 +16,9 @@ spring:
     url: jdbc:postgresql://localhost:5432/postgres
     username: postgres
     password: 821252
+
   jpa:
     show-sql: true
     hibernate:
-      ddl-auto: create-drop
-eureka:
-  client:
-    service-url:
-      defaultZone: http://localhost:8761/eureka/
-  instance:
-    instance-id: accept-message-service
+      ddl-auto: update
 
